--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <body>
         <h1>Olá Git</h1>
-        <p>Adiciona um paragrafogit</p>
+        <p>Adiciona um paragrafo FIZ UMA ALTERAÇAO</p>
     </body>
 </html>
